--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -13,31 +13,10 @@
 .layout_sidebar_scroll {
     height: calc(100vh - 4rem);
     overflow-y: auto;
+    /* For Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: rgb(210, 210, 210) rgb(46, 54, 69) !important;
 }
-
-// .layout_sidebar_scroll::-webkit-scrollbar {
-//     width: 0.5em;
-//     height: 0.5em;
-//     background-color: transparent !important;
-// }
-
-// .layout_sidebar_scroll::-webkit-scrollbar-thumb {
-//     background-color: transparent !important;
-// }
-
-// .layout_sidebar_scroll::-webkit-scrollbar-track {
-//     -webkit-box-shadow: none !important;
-//     background-color: transparent;
-// }
-
-// .layout_sidebar_scroll::-webkit-scrollbar-thumb:hover {
-//     background-color: #555;
-//     /* Change this to the desired thumb color on hover */
-// }
-
-// .layout_sidebar_scroll::-webkit-scrollbar-thumb {
-//     background: #ccc;
-// }
 
 .layout-menu {
     margin: 0;
